[tool.poetry]
name = "algoritmos"
version = "0.1.0"
description = "Documentación sobre algoritmos"
authors = ["jalmx <jalm_x@hotmail.com>"]
license = "MIT"
readme = "Readme.md"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^9.5.9"
mkdocs-markmap = "^2.4.3"
mkdocs-minify-plugin= "^0.8.0"
mkdocs-material-extensions = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

